examples/error-codes/violates-constraint/fatal/CV-TEAS3-bad-static.output
CV-TEAS3-bad-static.c:4:2: error: 'lvalue' required as left operand in assignment.
  Constraint violation (CV-TEAS3). See C11 sec. 6.5.16:2
Translation failed (config dumped). Run kcc -d CV-TEAS3-bad-static.c to see commands run.
