examples/error-codes/violates-constraint/fatal/CV-TEAS3-bad-static.c
// Copyright (c) 2015 Runtime Verification, Inc. (RV-Match team). All Rights Reserved.

int main() {
	42 = 42;
}
